# llama.moe

./: .gitignore  .gitmodules  README.md  gguf_print.py  pyproject.toml  requirements.txt  run_test.py
.github/: copilot-instructions.md
benchmark/: README.md  overhead.py  throughput.py
benchmark/accuracy/: eval.py
benchmark/offload/: numa.py  throughput.py
benchmark/overhead/: main.py
benchmark/prune/: eval.py  overhead.py
benchmark/server/: __init__.py  fastllm.py  llama_cpp.py  llama_moe.py  server_handler.py
benchmark/throughput/: dataset.py  fastllm.py  llama_cpp.py  llama_moe.py  main.py
benchmark/utils/: port.py
scripts/: build.sh  build_all.sh  build_llama_moe.sh  build_nvbandwidth.sh  build_pcm.sh  build_stream.sh  configs.json  configs.toml  download_model.sh  draw_table.py  expert_activation_analysis.py  get_models.sh  gguf_merge.sh  gguf_print.py  log_analysis.py  merge.sh  model_download.sh  print_gguf.py  read_topk.py  run.sh  run_pruning.sh  run_r1.sh  run_test.py
src/llama_moe/: __init__.py  cli.py  core.py  crop.py  override.py  proxy.py  prune.py  pruner.py  tracker.py  wrapper.py
tests/: accuracy.py  overhead.py  regression.py  run_fastllm.sh  run_llama-moe.sh  run_llama-server.sh  run_llama_server.sh  run_server.sh  simple_eval.py  simple_test.py  throughput.py
tests/accuracy/: all.py  cmmlu_subset.py  gsm8k.py
tests/eval/: all.py  analysis.py  dataclass.py  gpu_recorder.py  gsm8k.py  mmlu.py  run.py
tests/llama-cli/: configs.toml  run.sh  run_r1.sh  run_test.py
tests/llama-server/: perf.py  run_server.sh  server.py  test.py
tests/throughput/: gpu_recorder.py  gsm8k.py  log_analysis.py  report.py  (+2 more)
(+27 files in other folders)
