[project]
name = "llama-moe"
version = "0.1.0"
description = "llama-moe Environmental Management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "gguf>=0.17.1",
    "matplotlib>=3.10.5",
    "numpy>=1.26.4",
    "opencompass[api]>=0.4.2",
    "pandas>=1.5.3",
    "prettytable>=3.16.0",
]
