[project]
name = "llama-moe"
version = "0.1.0"
description = "llama-moe Environmental Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "gguf>=0.17.1",
    "httpx>=0.27.2",
    "nvidia-ml-py>=13.580.65",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "evalscope>=0.17.1",
    "matplotlib>=3.10.5",
    "numpy>=1.26.4",
    "openai>=1.99.9",
    "pandas>=1.5.3",
    "prettytable>=3.16.0",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
llama-moe = "llama_moe.cli:main"
